Updates to gradles

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,12 @@ dependencies {
 
     //below here and that one line above is what I added
     implementation platform ('com.google.firebase:firebase-bom:29.3.0')
+    implementation 'com.google.firebase:firebase-core:20.1.2'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
     //this below was on the google website with ui-auth stuff. Not sure the difference between this and the one I have
 //    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
-
-
 }
+
+apply plugin: 'com.google.gms.google-services'
