--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SuperApp">
         <activity
+            android:name=".SettleUpActivity"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".User"-->
+<!--            android:exported="false" />-->
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -18,38 +24,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"
-            android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".MainScreenManagerActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.uga.cs.superapp.RegisterActivity" />
         </activity>
-        <activity android:name=".ReviewGroceryListActivity"
-            android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".ReviewGroceryListActivity"
+            android:parentActivityName=".MainScreenManagerActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.uga.cs.superapp.ReviewGroceryListActivity" />
         </activity>
-        <activity android:name=".MainScreenManagerActivity"
-            android:parentActivityName=".MainActivity">
-
-            <!-- The meta-data tag is required if you support API level 15 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.uga.cs.superapp.MainScreenManagerActivity" />
-        </activity>
-        <activity android:name=".NewGroceryItemActivity"
-            android:parentActivityName=".MainActivity">
-
-            <!-- The meta-data tag is required if you support API level 15 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.uga.cs.superapp.NewGroceryItemActivity" />
-        </activity>
+        <activity
+            android:name=".MainScreenManagerActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".NewGroceryItemActivity"
+            android:parentActivityName=".MainScreenManagerActivity" />
     </application>
 
 </manifest>
